@@ -464,7 +464,7 @@ define,	   0x5CD960,	0x5DC940,	0x5CD880,	"Unit_is_terrain_impassable",			"bool (
 define,	   0x41CD22,	0x41E04C,	0x41CDA2,	"ADDR_LUXURY_BOX_ROW_HEIGHT",			"byte *"
 define,	   0x30,	0x38,		0x30,		"LUXURY_BOX_ROW_HEIGHT_STACK_OFFSET",		"int"
 define,	   0x740A00,	0x75ADA0,	0x7409C0,	"p_city_form",					"City_Form *"
-define,	   0x5F82E0,	0x6087E0,	0x5F8210,	"Sprite_draw",					"int (__fastcall *) (Sprite * this, int edx, PCX_Image * canvas, int pixel_x, int pixel_y, int param_4)"
+define,	   0x5F82E0,	0x6087E0,	0x5F8210,	"Sprite_draw",					"int (__fastcall *) (Sprite * this, int edx, PCX_Image * canvas, int pixel_x, int pixel_y, PCX_Color_Table * color_table)"
 repl call, 0x421295,	0x4227F5,	0x421315,	"Sprite_draw_improv_img_on_city_form",		""
 inlead,	   0x421240,	0x4227A0,	0x4212C0,	"draw_improv_icons_on_city_screen",		"void (__cdecl *) (Base_List_Control * control, int improv_id, int item_index, int offset_x, int offset_y)"
 define,	   0x4B0710,	0x4B76C0,	0x4B07A0,	"City_get_tourism_amount",			"int (__fastcall *) (City * this, int edx, int improv_id)"
@@ -732,6 +732,12 @@ repl call, 0x4BD95E,	0x4C4FB4,	0x4BD9EE,	"Leader_count_any_shared_wonders_with_f
 repl call, 0x4B24E5,	0x4B946C,	0x4B2575,	"Leader_count_any_shared_wonders_with_flag",	""
 inlead,	   0x55A7E0,	0x5666F0,	0x55A790,	"Leader_has_wonder_doubling_happiness_from",	"bool (__fastcall *) (Leader * this, int edx, int improv_id)"
 inlead,	   0x56A2A0,	0x576740,	0x56A250,	"Leader_can_build_city_improvement",		"bool (__fastcall *) (Leader * this, int edx, int i_improv, bool param_2)"
+inlead,	   0x4BF660,	0x4C6C10,	0x4BF6F0,	"City_draw_citizens",				"void (__fastcall *) (City * this, int edx, PCX_Image * canvas, RECT * rect, char param_3)"
+repl call, 0x4BF95D,	0x4C6F0D,	0x4BF9ED,	"Sprite_draw_entertainer_yield_icon",		""
+repl call, 0x4BF912,	0x4C6EC2,	0x4BF9A2,	"Sprite_draw_scientist_yield_icon",		""
+repl call, 0x4BF8C0,	0x4C6E70,	0x4BF950,	"Sprite_draw_tax_collector_yield_icon",		""
+repl call, 0x4BF9E1,	0x4C6FA1,	0x4BFA71,	"Sprite_draw_civil_engineer_yield_icon",	""
+repl call, 0x4BFA45,	0x4C7005,	0x4BFAD5,	"Sprite_draw_police_officer_yield_icon",	""
 
 ignore,	   0x4507B0,	0x452860,	0x0,		"Unit_ai_move_offensive_unit",			"void (__fastcall *) (Unit * this)"
 ignore,    0x44C340,	0x0,		0x0,		"Unit_ai_eval_bombard_target",			"int (__fastcall *) (Unit * this, int edx, int tile_x, int tile_y, int param_3)"
