@@ -274,6 +274,10 @@ patch_empty_army_movement = true
 ; the unit AI invokes the pathfinder for an off-map unit. I don't know how AI units can end up off the map in the first place.
 delete_off_map_ai_units = true
 
+; On the city screen, the icons for different kinds of specialist yields get drawn over top of, instead of beside, one another. This setting fixes
+; that so they are displayed properly.
+fix_overlapping_specialist_yield_icons = true
+
 [=========================]
 [=== ENGINE EXTENSIONS ===]
 [=========================]
