@@ -1,6 +1,7 @@
 - AI routine for "caravan units", which are modded units whose purpose is to be disbanded for shields
   - Controlled by config option enable_caravan_unit_ai
 - Delete any AI units that somehow end up off the map to fix a rare crash, setting named delete_off_map_ai_units
+- Fix icons for different kinds of specialist yields obscuring each other, setting named fix_overlapping_specialist_yield_icons
 - Correct typo in name of share_visibility_in_hotseat setting. The old, incorrect name still works as an alias.
 
 * RELEASE 23
